# FlowStack

./: API_DOCUMENTATION.md  ARCHITECTURE.md  COMPONENT_DIAGRAMS.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  LOW_LEVEL_DESIGN.md  README.md
backend/: .gitignore  crud.py  database.py  llm_handler.py  main.py  models.py  orchestrator.py  processing.py  pyproject.toml  reset_db.py  schemas.py  validator.py  web_search.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: axios.js
frontend/src/components/: ChatModal.jsx  ComponentsPanel.jsx  ConfigurationPanel.jsx  CreateStackModal.jsx
frontend/src/components/nodes/: KnowledgeBaseNode.jsx  LlmEngineNode.jsx  OutputNode.jsx  UserQueryNode.jsx
frontend/src/context/: WorkflowContext.js
frontend/src/pages/: BuilderPage.jsx  DashboardPage.jsx
